--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,9 @@
     <modules>
         <module>day01_spring</module>
         <module>day01_bean</module>
-        <module>day01_DI</module>
+        <module>day02_annoioc</module>
+        <module>day02_xmlioc</module>
+        <module>day02_annoioc_withoutxml</module>
     </modules>
     <dependencies>
         <dependency>
@@ -30,7 +32,15 @@
             <version>1.18.8</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.0.2.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.1</version>
+        </dependency>
     </dependencies>
-
-
 </project>
