--- a/day01_factory/src/main/resources/beans.properties
+++ b/day01_factory/src/main/resources/beans.properties
@@ -1,2 +1,2 @@
-accountService=com.crossing.service.impl.AccountServiceImpl
-accountDao=com.crossing.dao.impl.AccountDaoImpl
+accountService=com.com.AccountServiceImpl
+accountDao=com.com.crossing.dao.impl.AccountDaoImpl
