--- a/day03_account/pom.xml
+++ b/day03_account/pom.xml
@@ -9,13 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>day02_xmlioc</artifactId>
-    <packaging>jar</packaging>
-
-    <dependencies>
-
-    </dependencies>
-
+    <artifactId>day03_account</artifactId>
 
 
 </project>
