--- a/day03_annotationAOP/pom.xml
+++ b/day03_annotationAOP/pom.xml
@@ -9,13 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>day02_xmlioc</artifactId>
+    <artifactId>day03_annotationAOP</artifactId>
     <packaging>jar</packaging>
-
     <dependencies>
-
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.4</version>
+        </dependency>
     </dependencies>
-
-
 
 </project>
